--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,3 +92,16 @@
   height: 0;
   visibility: hidden;
 }
+
+@keyframes gradient {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-gradient {
+  animation: gradient 3s linear infinite;
+}
